--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "private": true,
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.6",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
