--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-is": "^17.0.2",
+    "scrollreveal": "^4.0.9",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
